fix activity indicator cutoff

--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -144,7 +144,7 @@
     }
 }
 @media only screen and (min-width: 768px){
-    .account{
+ .fixed   .account{
     width: 380px
 }
 
